--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
 
     <footer id="rodape">
-        
+        <p><strong>&copy;Copyright 2022 - by JoaoPedro</strong></p>
     </footer>
 
 </div>
