--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="#sobre">Sobre</a>
-                    <a href="#sobre">Projetos</a>
+                    <a href="#titulo-prj">Projetos</a>
                     <a href="mailto:jpmarcosnunes@gmail.com" target="_black">Contato</a>
 
                 </nav>
