--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="social">
                 <a href="https://www.instagram.com/jaoopedr01/?hl=pt-br" target="_black"><button><i class="fa-brands fa-instagram"></i></button></a>
                 <a href="https://github.com/jaoopedro" target="_black"><button><i class="fa-brands fa-github"></i></button></a>
-                <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-5295b0183/" target="_black"><button><i class="fa-brands fa-linkedin-in"></i></button></a>
+                <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-nunes-5295b0183/" target="_black"><button><i class="fa-brands fa-linkedin-in"></i></button></a>
             </div>
         </div>
     </header>
