--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
     <script src="https://kit.fontawesome.com/5eed80561d.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="imagens/local-na-rede-internet.png">
     <title>Site Portifolio</title>
 
 </head>
@@ -21,7 +22,7 @@
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="https://pontodev.vercel.app/" target="_black">Blog</a>
-                    <a href="">Sobre</a>
+                    <a href="#sobre-mim">Sobre</a>
                     <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-5295b0183/" target="_black">Contato</a>
 
                 </nav>
