--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="index.html">Home</a>
                     <a href="https://pontodev.vercel.app/" target="_black">Blog</a>
                     <a href="#sobre-mim">Sobre</a>
-                    <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-5295b0183/" target="_black">Contato</a>
+                    <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-marcos-5295b0183/" target="_black">Contato</a>
 
                 </nav>
             </div>
