Atualização no titulo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilo.css">
     <script src="https://kit.fontawesome.com/5eed80561d.js" crossorigin="anonymous"></script>
     <link rel="icon" href="imagens/local-na-rede-internet.png">
-    <title>Site Portifolio</title>
+    <title>Joao Pedro</title>
 
 </head>
 <body>
