--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
     <script src="https://kit.fontawesome.com/5eed80561d.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="imagens/local-na-rede-internet.png">
+    <link rel="icon" href="imagens/procurar.png">
     <title>Joao Pedro</title>
 
 </head>
@@ -58,6 +58,13 @@
             </div>
             <div id="projetos">
                 <h1>Projetos</h1>
+                <div id="projeto-1">
+                    <h3>PCA - ODS 14</h3>
+                    <p>Criação de um Sita <br>
+                       para uma ong marinha.
+                    </p>
+                    
+                </div>
             </div>
         </article>
     </section>
