--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
                        para Devs iniciantes
                     </p>
                 </div>
+                <div id="projeto-3">
+                    <h3>Programas Python</h3>
+                    <p>
+                        
+                    </p>
+                </div>
             </div>
         </article>
     </section>
