separando as áreas do site

--- a/index.html
+++ b/index.html
@@ -30,13 +30,7 @@
                    
 
                 </nav>
-            </div>
-            <div class="social">
-                <a href="https://www.instagram.com/jaoopedr01/?hl=pt-br" target="_blank"><button><i class="fa-brands fa-instagram"></i></button></a>
-                <a href="https://github.com/jaoopedro" target="_blank"><button><i class="fa-brands fa-github"></i></button></a>
-                <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-nunes-5295b0183/" target="_blank"><button><i class="fa-brands fa-linkedin-in"></i></button></a>
-            </div>
-        </div>
+
     </header>
 <div id="interface">
     <section id="apresentacao">
@@ -85,5 +79,14 @@
     </footer>
 
 </div>
+<footer>
+</div>
+<div class="social">
+    <a href="https://www.instagram.com/jaoopedr01/?hl=pt-br" target="_blank"><button><i class="fa-brands fa-instagram"></i></button></a>
+    <a href="https://github.com/jaoopedro" target="_blank"><button><i class="fa-brands fa-github"></i></button></a>
+    <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-nunes-5295b0183/" target="_blank"><button><i class="fa-brands fa-linkedin-in"></i></button></a>
+</div>
+</div>
+</footer>
 </body>
 </html>
