--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
 </head>
 <body>
 	
-    <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div id="menu-bar">
+        <div id="menu" onclick="onClickMenu()">
+            <div id="bar1" class="bar"></div>
+            <div id="bar2" class="bar"></div>
+            <div id="bar3" class="bar"></div>
 
-        <div class="overlay-content">
-            <a href="#sobre-mim">Sobre</a>
-            <a href="#projetos">Projetos</a>
-            <a href="imagens/Curriculo Joao Pedro Marcos (1) (1).pdf" download="Curriculo JoaoPedro" target="_blank">Curriculo</a>
-            <a href="mailto:jpmarcosnunes@gmail.com">Contato</a>
         </div>
+        <ul class="nav" id="nav">
+            <li><a href="#sobre-mim">Sobre</a></li>
+            <li><a href="#projetos">Projetos</a></li>
+            <li><a href="imagens/Curriculo Joao Pedro Marcos (1) (1).pdf" target="_blank">Curriculo</a></li>
+            <!--<li ><a href="" onclick="aba()"> Doações </a></li>-->
+ 
+
+        </ul>
 
     </div>
-
-    <!--BOTÃO PARA APARECER O MENU-->
-    <button class="nav-button" onclick="openNav()">
-        <i class="fa-solid fa-bars fa-2x"></i>
-    </button>
+    <div class="menu-bg" id="menu-bg"></div>
 
     
 <div id="interface">
